--- a/Practica1.html
+++ b/Practica1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practica1</title>
 </head>
 <body bgcolor="#DAF7A6">
     <h1>Etiquetas basicas del HTML</h1>
