Se agregaron nuevas etiquetas 08/feb/2023

--- a/Practica3.html
+++ b/Practica3.html
@@ -23,7 +23,7 @@
     </div>
 
     <br><br>
-    <a href="https://tienda.caffenio.com/"target="_blank">Quieres tomar algo??
+    <a href="https://tienda.caffenio.com/"target="_blank">
         <hr>
     <img src="images.png" alt="" width="25%">
     </a>
