se agregaron nuevas etiquetas el dia 21/feb/2023

--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
 <body>
     <h1>Portafolio</h1><hr>
     <h3>Nombre: Serrano González itzel Amairany</h3>
-    <div class="lista">
-        <a href="Practicaa2.html">Practica #2. Elementos basicos de HTML</a>
+    <div class="listaa">
+        <a href="Practica1.html">Practica #1.Etiquetas basicas del HTML</a>
     </div>
+    <div class="lista">
+        <a href="Practicaa2.html">Practica #2. Elementos basicos de HTML</a><br>
+    </div>
+    <div class="listaa">
+        <a href="Practica3.html">Practica #3. Hipervinculos 1</a>
+    </div>
+    <div class="listaa">
+        <a href="Practicaa4.html">Practica #4. Reposteria</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica5.html">Practica #5. Formularios</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica7.html">Practica #7.Bootsrap</a>
+    </div>
+
+
 
 
 <h3>serrano itzel 15/feb/2023</h3>
