Se agregaron nuevas etiquetas 22/feb/2023

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <div class="listaa">
         <a href="Practica7.html">Practica #7.Bootsrap</a>
     </div>
+    <div class="listaa">
+        <a href="Practica9.html">Practica #9.Bootsrap</a>
+    </div>
 
 
 
