con nuevas etiquetas 8/marzo/2023

--- a/Practica12.html
+++ b/Practica12.html
@@ -10,6 +10,41 @@
 <body>
     <div class="container">
         <div class="row">
+          <nav class="navbar navbar-expand-lg " style="background-color: #E389B9;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Mi pagina</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Bienvenido</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     Opciones
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Flores</a></li>
+                      <li><a class="dropdown-item" href="#">Arreglos</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Desactivas</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav><br>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -44,7 +79,50 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-             
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <img src="agua1.jpg" class="card-img-top" alt="" width="50%">
+            <div class="card-body">
+              <h5 class="card-title">Agua</h5>
+              <p class="card-text">agua que moja y ademas es liquida</p>
+              <h4 class="mt-q text-center">3000</h4>
+              <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <img src="agua5.jpg" class="card-img-top" alt="" width="50%">
+            <div class="card-body">
+              <h5 class="card-title">Agua</h5>
+              <p class="card-text">agua que moja y ademas es liquida</p>
+              <h4 class="mt-q text-center">2500</h4>
+              <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <img src="puntoo.jpg" class="card-img-top" alt="" width="50%">
+            <div class="card-body">
+              <h5 class="card-title">Direccion roja</h5>
+              <p class="card-text">Es un punto que te permite dar direccion a donde quieres llegar es muy util para encontar mas facil la ubicacion </p>
+              <h4 class="mt-q text-center">3000</h4>
+              <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <img src="agua1.jpg" class="card-img-top" alt="" width="50%">
+            <div class="card-body">
+              <h5 class="card-title">Agua alcalina del mejor mania</h5>
+              <p class="card-text">agua que moja y ademas es liquida</p>
+              <h4 class="mt-q text-center">3000</h4>
+              <a href="#" class="btn btn-primary">Añadir al carrito</a>
+            </div>
+          </div>
         </div>
     </div>
 
