--- a/index.html
+++ b/index.html
@@ -5,13 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-       .lista{
-
-    } 
-    </style>
 </head>
-<body>
+<body bgcolor="#EACBFF ">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <div class="container">
+        <div class="row">
+          <nav class="navbar navbar-expand-lg " style="background-color: #E389B9;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Mi pagina</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Bienvenido</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     Opciones
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#"><a href="" target="_blank"><b>Ir a walmart</b></a></a></li>
+                      <li><a class="dropdown-item" href="#">Arreglos</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Desactivas</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav><br>
+
+
     <h1>Portafolio</h1><hr>
     <h3>Nombre: Serrano González itzel Amairany</h3>
     <div class="listaa">
@@ -30,15 +65,39 @@
         <a href="Practica5.html">Practica #5. Formularios</a>
     </div>
     <div class="listaa">
+        <a href="Practica6.html">Practica #5. Formularios</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica6_contacto.html">Practica #5. Formularios</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica6_galeria.html">Practica #5. Formularios</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica6_noticias.html">Practica #5. Formularios</a>
+    </div>
+    <div class="listaa">
         <a href="Practica7.html">Practica #7.Bootsrap</a>
     </div>
     <div class="listaa">
-        <a href="Practica9.html">Practica #9.Bootsrap</a>
+        <a href="Practica8.html">Practica #8.Tablas con booststrap</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica9.html">Practica #9.Pagina WEB</a>
+    </div>
+    <div class="listaa">
+        <a href="productos.sql">Practica #9.Bootsrap</a>
+    </div>
+    <div class="listaa">
+        <a href="usuarios.sql">Practica #9.Bootsrap</a>
+    </div>
+    <div class="listaa">
+        <a href="Practica12.html">Proyecto #12.Pagina WEB MEJORADA</a>
     </div>
 
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.6.3.js"></script>
 
-
-
-<h3>serrano itzel 15/feb/2023</h3>
+<h3> itzel serrano 14/mar/2023</h3>
 </body>
 </html>
