Pagina web (Habiamos subido el equivocado)14.03.23

--- a/paginaa.html
+++ b/paginaa.html
@@ -155,6 +155,43 @@
             </div>
     
     </div>
+    <hr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
+    <center><h1>Registro</h1></center>
+    <br>
+    <center><label for="Nombre">Nombre</label></center>
+    <br>
+    <input type="text" placeholder="Teclea tu nombre" requiered>
+    <br><br>
+    <label for="Edad"><center>Edad</center></label>
+    <br>
+    <input type="number" placeholder="Teclea tu edad" requiered>
+    <br><br>
+    <label for="Nombre"><center>Nacimiento</center></label>
+    <br>
+    <input type="date" placeholder="Teclea tu edad" requier ed>
+    <br><br>
+    <center><input type="radio" name="sexo"  requiered>Femenino</center>
+    <center><input type="radio" name="sexo"  requiered>Masculino</center>
+    <br><br>
+   <label for="direccion"> <center>Dirección</center></label><br>
+    <textarea name="direccion" id="" cols="20" rows="5" 
+    placeholder="Teclea dirección"></textarea>
+    <br><br>
+
+
+    <input type="submit" value="Guardar informacion"><br><br>
     <br>
     <br>
     <br>
