--- a/parcial3/Practica2.html
+++ b/parcial3/Practica2.html
@@ -9,6 +9,7 @@
     <div class="container">
     <h1>Registro de alumno</h1>
     <form action="">
+       <form action="Practica2.php" method="GET"></form>
         <div class="form-group">
             <label for="">Nombre</label>
             <input name="nombre" type="text" class="form-control">
