Ya terminadooo 01-junio-2023

--- a/parcial3/pracica4.html
+++ b/parcial3/pracica4.html
@@ -18,13 +18,13 @@
                     1.-¿Cual es el primer programa que haces al aprender un lenguaje nuevo de programacion?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta1" value="a">a Hola Mundo 
+                    <input type="radio" name="pregunta1" value="a" checked>a Hola Mundo 
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta1" value="b">b Arreglos
+                    <input type="radio" name="pregunta1" value="b" checked>b Arreglos
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta1" value="c">c Hola mundo mejorado
+                    <input type="radio" name="pregunta1" value="c" checked>c Hola mundo mejorado
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -32,13 +32,13 @@
                     2.-¿Cual fue la ultima pelicula que estreno Disney?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta2" value="a">a Atlantis
+                    <input type="radio" name="pregunta2" value="a" checked>a Atlantis
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta2" value="b">b Pinocho
+                    <input type="radio" name="pregunta2" value="b" checked>b Pinocho
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta2" value="c">c La sirenita
+                    <input type="radio" name="pregunta2" value="c" checked>c La sirenita
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -46,13 +46,13 @@
                     3.-¿En cuales dia van a misa los cristianos?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta3" value="a">a Solo domingo
+                    <input type="radio" name="pregunta3" value="a" checked>a Solo domingo
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta3" value="b">b Jueves, Viernes y Domingo
+                    <input type="radio" name="pregunta3" value="b" checked>b Jueves, Viernes y Domingo
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta3" value="c">c Miercoles, Sabado y Domingo
+                    <input type="radio" name="pregunta3" value="c" checked>c Miercoles, Sabado y Domingo
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -60,13 +60,13 @@
                     4.-¿Cual fue la fruta prohibida que comio Eva?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta4" value="a">a Manzana verde
+                    <input type="radio" name="pregunta4" value="a" checked>a Manzana verde
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta4" value="b">b Manzana roja
+                    <input type="radio" name="pregunta4" value="b" checked>b Manzana roja
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta4" value="c">c Pera
+                    <input type="radio" name="pregunta4" value="c" checked>c Pera
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -74,13 +74,13 @@
                     5.-¿Cual es el primer lenguaje que enseña en progra?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta5" value="a">a Lenguaje C
+                    <input type="radio" name="pregunta5" value="a" checked>a Lenguaje C
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta5" value="b">b Lenguaje Java
+                    <input type="radio" name="pregunta5" value="b" checked>b Lenguaje Java
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta5" value="c">c Lenguaje JavaScrip
+                    <input type="radio" name="pregunta5" value="c" checked>c Lenguaje JavaScrip
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -88,13 +88,13 @@
                     6.-¿En que cafeteria esta mas barata la comida?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta6" value="a">a Cafetis
+                    <input type="radio" name="pregunta6" value="a" checked>a Cafetis
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta6" value="b">b Doña sofi
+                    <input type="radio" name="pregunta6" value="b" checked>b Doña sofi
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta6" value="c">c sara
+                    <input type="radio" name="pregunta6" value="c" checked>c sara
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -102,13 +102,13 @@
                     7.-¿En que especialidad se gasta mas dinero?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta7" value="a">a Programacion
+                    <input type="radio" name="pregunta7" value="a" checked>a Programacion
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta7" value="b">b Contabilidad
+                    <input type="radio" name="pregunta7" value="b" checked>b Contabilidad
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta7" value="c">c Electronica
+                    <input type="radio" name="pregunta7" value="c" checked>c Electronica
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -116,13 +116,13 @@
                     8.-¿En que escuela son mas estrictos?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta8" value="a">a Cbtis 224
+                    <input type="radio" name="pregunta8" value="a" checked>a Cbtis 224
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta8" value="b">b Cobaes 104
+                    <input type="radio" name="pregunta8" value="b" checked>b Cobaes 104
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta8" value="c">c Cetis 107
+                    <input type="radio" name="pregunta8" value="c" checked>c Cetis 107
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -130,13 +130,13 @@
                     9.-¿Cual de estas comidas es mas saludable?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta9" value="a">a Pizza
+                    <input type="radio" name="pregunta9" value="a" checked>a Pizza
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta9" value="b">b Pechuga rellena
+                    <input type="radio" name="pregunta9" value="b" checked>b Pechuga rellena
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta9" value="c">c Sushi
+                    <input type="radio" name="pregunta9" value="c" checked>c Sushi
                 </li>
             </ul><br>
             <ul class="list-group">
@@ -144,13 +144,13 @@
                     10.-¿cual bebida contiene mas azucar?
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta10" value="a">a Limonada
+                    <input type="radio" name="pregunta10" value="a" checked>a Limonada
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta10" value="b">b Agua
+                    <input type="radio" name="pregunta10" value="b" checked>b Agua
                 </li>
                 <li class="list-group-item">
-                    <input type="radio" name="pregunta10" value="c">c Coca cola
+                    <input type="radio" name="pregunta10" value="c" checked>c Coca cola
                 </li>
             </ul><br>
             <div>
