YA TERMINADO 06-junio-2023

--- a/parcial3/practica5.html
+++ b/parcial3/practica5.html
@@ -28,19 +28,19 @@
     <form action="">
     <table>
         <tr >
-            <td><input type="text" name="cuadro[]"value="x" required ></td>
-            <td><input type="text" name="cuadro[]"value="o" required ></td>
-            <td><input type="text" name="cuadro[]"value="o" required ></td>
+            <td><input type="text" name="cuadro[]"value="X" required ></td>
+            <td><input type="text" name="cuadro[]"value="O" required ></td>
+            <td><input type="text" name="cuadro[]"value="O" required ></td>
         </tr>
         <tr>
-            <td><input type="text" name="cuadro[]"value="o" required ></td>
-            <td><input type="text" name="cuadro[]"value="x" required ></td> 
-            <td><input type="text" name="cuadro[]"value="x" required ></td>
+            <td><input type="text" name="cuadro[]"value="O" required ></td>
+            <td><input type="text" name="cuadro[]"value="X" required ></td> 
+            <td><input type="text" name="cuadro[]"value="X" required ></td>
         </tr>
         <tr>
-            <td><input type="text" name="cuadro[]"value="x" required ></td>
-            <td><input type="text" name="cuadro[]"value="o" required ></td>
-            <td><input type="text" name="cuadro[]"value="x" required ></td>
+            <td><input type="text" name="cuadro[]"value="X" required ></td>
+            <td><input type="text" name="cuadro[]"value="O" required ></td>
+            <td><input type="text" name="cuadro[]"value="X" required ></td>
 
         </tr>
     </table><br>
