--- a/parcial3/practica6.html
+++ b/parcial3/practica6.html
@@ -17,7 +17,7 @@
                 </div><br>
                 <div class="form-group">
                     <label for="">Palabra:</label>
-                    <input type="text" required name="Palabra" class="form-control" value="hola">
+                    <input type="text" required name="palabra" class="form-control" value="hola">
                 </div><br>
                 <div class="form-group">
                     <label for=""># vidas:</label>
